--- a/ExamCrazy.csproj
+++ b/ExamCrazy.csproj
@@ -73,6 +73,13 @@
     <Compile Include="admin\AddJob.aspx.designer.cs">
       <DependentUpon>AddJob.aspx</DependentUpon>
     </Compile>
+    <Compile Include="admin\AddUpdate.aspx.cs">
+      <DependentUpon>AddUpdate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\AddUpdate.aspx.designer.cs">
+      <DependentUpon>AddUpdate.aspx</DependentUpon>
+    </Compile>
     <Compile Include="admin\adminlogin.aspx.cs">
       <DependentUpon>adminlogin.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -367,13 +374,6 @@
     <Compile Include="Test\rss_feed_announce.aspx.designer.cs">
       <DependentUpon>rss_feed_announce.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Test\WebForm1.aspx.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Test\WebForm1.aspx.designer.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
-    </Compile>
     <Compile Include="toprssxml.aspx.cs">
       <DependentUpon>toprssxml.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -430,6 +430,7 @@
     <Content Include="AdminFeed.master" />
     <None Include="App_Code\BLL\ImageUploadManager.cs.exclude" />
     <None Include="App_Code\BLL\Providers\User\ProviderShowAllUsers.cs.exclude" />
+    <Content Include="admin\AddUpdate.aspx" />
     <Content Include="default.aspx" />
     <Content Include="Error\css\content.css" />
     <Content Include="Error\css\contentxd.css" />
@@ -737,7 +738,6 @@
     <Content Include="Test\DynamicTableTest.aspx" />
     <Content Include="Test\LoginControl.aspx" />
     <Content Include="Test\rss_feed_announce.aspx" />
-    <Content Include="Test\WebForm1.aspx" />
     <Content Include="User\__user.aspx" />
     <Content Include="Web.sitemap" />
     <Content Include="newrssxml.aspx" />
