WebConfig: Support for Jobs urlrewrite + custom errors
Added support for url rewrite for jobs and customerrors mode set to
RemoteOnly

Signed-off-by: NKK <nkk@gmail.com>

--- a/Web.config
+++ b/Web.config
@@ -56,7 +56,7 @@
             it enables developers to configure html error pages 
             to be displayed in place of a error stack trace.
         -->
-		<customErrors mode="On" defaultRedirect="Error/ExamCrazy-ErrorPage.aspx">
+		<customErrors mode="RemoteOnly" defaultRedirect="Error/ExamCrazy-ErrorPage.aspx">
 			<error statusCode="403" redirect="Error/ExamCrazy-NoAccess.aspx"/>
 			<error statusCode="404" redirect="Error/ExamCrazy-FileNotFound.aspx"/>
 		</customErrors>
@@ -127,7 +127,9 @@
   </system.webServer>
   <rewriter>
     <rewrite url="~/User/(.+)" to="~/User/__user.aspx?RequestedURL=$1" />
+    <rewrite url="~/Jobs-Interviews/(.+)" to="~/Jobs-Interviews/__Jobs.aspx?RequestedURL=$1" />
   </rewriter>
+  
 
   <runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
