Web.config: Connection String
Updated connection string with server path.

Signed-off-by: NKK <nkk@gmail.com>

--- a/Web.config
+++ b/Web.config
@@ -26,7 +26,7 @@
 	</configSections>
 	<appSettings/>
 	<connectionStrings>
-		<add name="strConn" connectionString="Initial Catalog=NewWeb;Data Source=USER-PC\SQLEXPRESS;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
+		<add name="strConn" connectionString="Server=69.167.173.116; Database=gatetuto_eth; user id=npreth; password=nji9NJI(" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<system.web>
 		<!-- 
