--- a/Web.config
+++ b/Web.config
@@ -3,7 +3,7 @@
     Note: As an alternative to hand editing this file you can use the 
     web admin tool to configure settings for your application. Use
     the Website->Asp.Net Configuration option in Visual Studio.
-    A full list of settings and comments can be found in 
+    A full list of settings and comments can be found in
     machine.config.comments usually located in 
     \Windows\Microsoft.Net\Framework\v2.x\Config 
 -->
@@ -56,7 +56,7 @@
             it enables developers to configure html error pages 
             to be displayed in place of a error stack trace.
         -->
-		<customErrors mode="RemoteOnly" defaultRedirect="Error/ExamCrazy-ErrorPage.aspx">
+		<customErrors mode="Off" defaultRedirect="Error/ExamCrazy-ErrorPage.aspx">
 			<error statusCode="403" redirect="Error/ExamCrazy-NoAccess.aspx"/>
 			<error statusCode="404" redirect="Error/ExamCrazy-FileNotFound.aspx"/>
 		</customErrors>
@@ -108,7 +108,8 @@
 		<modules>
 			<remove name="ScriptModule"/>
 			<add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-		</modules>
+      <add name="UrlRewriter" type="Intelligencia.UrlRewriter.RewriterHttpModule" />
+    </modules>
 		<handlers>
 			<remove name="WebServiceHandlerFactory-Integrated"/>
 			<remove name="ScriptHandlerFactory"/>
@@ -118,11 +119,11 @@
 			<add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 		</handlers>
-    <modules runAllManagedModulesForAllRequests="true">
-      <add name="UrlRewriter" type="Intelligencia.UrlRewriter.RewriterHttpModule" />
-    </modules>
+    <!--<modules runAllManagedModulesForAllRequests="true">
+      <add name="UrlRewriter" type="Intelligencia.UrlRewriter.RewriterHttpModule" DUPLICATE/>
+    </modules>-->
 
-    <validation validateIntegratedModeConfiguration="false" />
+    <!--<validation validateIntegratedModeConfiguration="false" />   DUPLICATE-->
 
   </system.webServer>
   <rewriter>
