Web Config: Bug fix: 3.5->4.0: handle of empty name
In 4.0 User/ return only User/ and not User/index.aspx. Handled Empty
file name.

Signed-off-by: NKK <nkk@gmail.com>

--- a/Web.config
+++ b/Web.config
@@ -66,8 +66,8 @@
 		<validation validateIntegratedModeConfiguration="false" />
 	</system.webServer>
 	<rewriter>
-		<rewrite url="~/User/(.+)" to="~/User/__user.aspx?RequestedURL=$1"/>
-		<rewrite url="~/Jobs-Interviews/(.+)" to="~/Jobs-Interviews/__Jobs.aspx?RequestedURL=$1"/>
+		<rewrite url="~/User/(.*)" to="~/User/__user.aspx?RequestedURL=$1"/>
+		<rewrite url="~/Jobs-Interviews/(.*)" to="~/Jobs-Interviews/__Jobs.aspx?RequestedURL=$1"/>
 	</rewriter>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
